new logo and footer

--- a/footer.html
+++ b/footer.html
@@ -22,73 +22,55 @@
 
   </div>
   <div>
-    <p><strong>DO YOU WANT TO MAKE THE 2025 SUMMIT HAPPEN? GET IN TOUCH!</strong></p>
-
-    <!--
+    <p><strong>MAKING THE 2025 SUMMIT HAPPEN</strong></p>
     <ul class="flex-container wrap" style="align-items: center;">
-      <li class="flex-item" style="width: 80px;"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
-      <li class="flex-item" style="width: 180px;"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
-      <li class="flex-item" style="width: 150px;"><img src="images/collabs/Foyen_svart.png"></a></li>
-      <li class="flex-item" style="width: 130px;"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
-      <li class="flex-item" style="width: 110px;"><img src="images/collabs/Pickering-Pearce-Logo-new.png"></a></li>
-      <li class="flex-item" style="width: 90px;"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
-      <li class="flex-item" style="width: 110px;"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
-      <li class="flex-item" style="width: 140px;"><img src="images/collabs/Tietoevry.png"></a></li>
-      <li class="flex-item" style="width: 90px;"><img src="images/collabs/Edita.png"></a></li>
-      <li class="flex-item" style="width: 100px;"><img src="images/collabs/DLA_Piper.jpg"></a></li>
-      <li class="flex-item" style="width: 190px;"><img src="images/collabs/Hansen.jpg"></a></li>
-      <li class="flex-item" style="width: 120px;"><img src="images/collabs/Simmons_&_Simmons_logo.svg.png"></a></li>
-      <li class="flex-item" style="width: 180px;"><img src="images/collabs/Booking_com.png"></a></li>
+      <li class="flex-item" style="width: 150px;"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG">
+      <li class="flex-item" style="width: 150px;"><img src="images/collabs/DLA Piper.jpg">
 
+      <li class="flex-item" style="width: 150px;"><img src="images/collabs/Legora (word logo).png">
     </ul>
-    -->
-    <p><strong>Ps. We also love collaborating with non-profits and academia</strong></p>
-    <!--
+    <ul
+      style="display: flex; justify-content: center; flex-wrap: wrap; gap: 50px; padding: 20px 0; list-style: none; margin: 0;">
+      <li style="width: 100px; display: flex; justify-content: center; align-items: center;">
+        <a href="https://ey.com" target="_blank">
+          <img src="images/collabs/EY_Law_ Black.png" alt="EY Law"
+            style="max-width: 100%; height: auto; object-fit: contain;">
+        </a>
+      </li>
+      <li style="width: 100px; display: flex; justify-content: center; align-items: center;">
+        <a href="https://www.almainsights.fi/" target="_blank">
+          <img src="images/collabs/Alma Insights__black.png" alt="Alma"
+            style="max-width: 100%; height: auto; object-fit: contain;">
+        </a>
+      </li>
+    </ul>
+    <p><strong>In Collaboration With</strong></p>
+
     <ul class="flex-container wrap" style="align-items: center;">
-      <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/aalto.png"></a></li>
-      <li class="flex-item" style="width: 70px;"><a><img src="images/collabs/clt.png"></a></li>
-      <li class="flex-item" style="width: 140px;"><a><img src="images/collabs/cltl.png"></a></li>
-      <li class="flex-item" style="width: 170px;"><a><img src="images/collabs/it.png"></a></li>
-      <li class="flex-item"><a><img src="images/collabs/elta.png"></a></li>
-      <li class="flex-item" style="width: 150px;"><a><img src="images/collabs/vanderbilt.png"></a></li>
-      <li class="flex-item" style="width: 80px;"><a><img src="images/collabs/lh.png"></a></li>
-      <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/nu-law.png"></a></li>
-      <li class="flex-item" style="width: 200px;"><a><img src="images/collabs/LITE-Lab.jpg"></a></li>
-      <li class="flex-item" style="width: 180px;"><a><img src="images/collabs/universidad-uch.png"></a></li>
-      <li class="flex-item" style="width: 200px;"><a><img
-            src="images/collabs/Escuela-de-Practica-Juridica-black.jpg"></a></li>
-      <li class="flex-item" style="width: 150px;"><a><img src="images/collabs/thinklegaltech.png"></a></li>
-      <li class="flex-item" style="width: 120px;"><a><img src="images/collabs/stanford.png"></a></li>
-      <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/LOGO-EUI-full.png"></a></li>
-      <li class="flex-item" style="width: 150px;"><a><img src="images/collabs/tuomioistuinvirasto.png"></a></li>
-      <li class="flex-item" style="width: 100px;"><a><img src="images/collabs/Juristiliitto.png"></a></li>
-      <li class="flex-item" style="width: 80px;"><a><img src="images/collabs/Asianajajaliitto.png"></a></li>
-      <li class="flex-item" style="width: 230px;"><a><img src="images/collabs/lapin-yliopisto.png"></a></li>
-      <li class="flex-item" style="width: 200px;"><img src="images/collabs/college-of-law-logolcolor.jpg"></a></li>
-      <li class="flex-item" style="width: 200px;"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
-      <li class="flex-item" style="width: 110px;"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
-      <li class="flex-item" style="width: 140px;"><img src="images/collabs/logo-eLegal.png"></a></li>
-      <li class="flex-item" style="width: 240px;"><img src="images/collabs/Laurea.png"></a></li>
-      <li class="flex-item" style="width: 140px;"><img src="images/collabs/UEF.jpg"></a></li>
-      <li class="flex-item" style="width: 140px;"><img src="images/collabs/Erasmus_program.PNG"></a></li>
-      <li class="flex-item" style="width: 100px;"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>
-      <li class="flex-item" style="width: 250px;"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
-      <li class="flex-item" style="width: 200px;"><img src="images/collabs/Bond-University.jpg"></a></li>
-      <li class="flex-item" style="width: 170px;"><img src="images/collabs/Helsinki_District_Court_Logo.jpg"></a></li>
-      <li class="flex-item" style="width: 230px;"><img src="images/collabs/Save_the_Children.png"></a></li>
-      <li class="flex-item" style="width: 200px;"><img src="images/collabs/Domstolsverket.png"></a></li>
-      <li class="flex-item" style="width: 200px;"><img src="images/collabs/CLOB.png"></a></li>
-      <li class="flex-item" style="width: 140px;"><img src="images/collabs/NELD.png"></a></li>
-      <li class="flex-item" style="width: 150px;"><img src="images/collabs/TalTech.png"></a></li>
-      <li class="flex-item" style="width: 240px;"><img src="images/collabs/FGV-Direito-SP.png"></a></li>
-      <li class="flex-item" style="width: 180px;"><img src="images/collabs/Helsinki-Incubators.png"></a></li>
 
-
+      <li class="flex-item" style="width: 120px;"><a href="https://www.lancaster.ac.uk/law/" target="_blank"><img
+            src="images/collabs/lancaster-logo-2.PNG"></a></li>
+      <li class="flex-item" style="width: 120px;"><a href="https://chancerylaneproject.org/" target="_blank"><img
+            src="images/logos/Logo blue.png"></a></li>
+      <li class="flex-item" style="width: 100px;"><a href="https://taltech.ee/en/department-law" target="_blank"><img
+            src="images/collabs/TalTech.png"></a></li>
+      <li class="flex-item" style="width: 120px;"><a
+          href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img
+            src="images/collabs/Domstolsverket.png"></a></li>
+      <li class="flex-item" style="width: 130px;"><a href="https://www.domstol.se/helsingborgs-tingsratt/"
+          target="_blank"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
+      <li class="flex-item"><a
+          href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
+          target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>
+      <li class="flex-item" style="width: 60px;"><a href="https://legalhackers.org/" target="_blank"><img
+            src="images/collabs/lh.png"></a></li>
+      <li class="flex-item" style="width: 100px;"><a href="https://www.hiil.org/" target="_blank"><img
+            src="images/collabs/HiiL_Logo color tagline.png"></a></li>
     </ul>
   </div>
-  -->
-    <!-- Content Main Section Ends -->
+
+  <!-- Content Main Section Ends -->
 
 
 
-  </div>
+</div>
