--- a/index.html
+++ b/index.html
@@ -389,10 +389,17 @@
 					</ul>
 
 					<!-- Second row with only EY -->
-					<ul style="display: flex; justify-content: center; padding: 20px 0; list-style: none; margin: 0;">
-						<li style="width: 170px; display: flex; justify-content: center; align-items: center;">
+					<ul
+						style="display: flex; justify-content: center; flex-wrap: wrap; gap: 50px; padding: 20px 0; list-style: none; margin: 0;">
+						<li style="width: 130px; display: flex; justify-content: center; align-items: center;">
 							<a href="https://ey.com" target="_blank">
 								<img src="images/collabs/EY_Law_ Black.png" alt="EY Law"
+									style="max-width: 100%; height: auto; object-fit: contain;">
+							</a>
+						</li>
+						<li style="width: 130px; display: flex; justify-content: center; align-items: center;">
+							<a href="https://www.almainsights.fi/" target="_blank">
+								<img src="images/collabs/Alma Insights__black.png" alt="Alma"
 									style="max-width: 100%; height: auto; object-fit: contain;">
 							</a>
 						</li>
