--- a/index.html
+++ b/index.html
@@ -465,8 +465,7 @@
 					target="_blank"><img src="images/collabs/clt.png"></a></li>
 			<!--<li class="flex-item" style="width: 300px"><a href="https://www.aalto.fi/en" target="_blank"><img
 						src="images/collabs/aalto.png"></a></li>
-			<li class="flex-item" style="width: 150px"><a href="https://www.copenhagenlegaltech.dk/"
-					target="_blank"><img src="images/collabs/clt.png"></a></li>
+			
 			<li class="flex-item"><a href="https://jura.ku.dk/legaltechlab/" target="_blank"><img
 						src="images/collabs/cltl.png"></a></li>
 			<li class="flex-item" style="width: 300px"><a href="https://www.it-oikeus.org/" target="_blank"><img
@@ -481,6 +480,8 @@
 						src="images/collabs/lh.png"></a></li>
 			<li class="flex-item" style="width: 150px;"><a href="https://www.hiil.org/" target="_blank"><img
 						src="images/collabs/HiiL_Logo color tagline.png"></a></li>
+			<li class="flex-item" style="width: 215px;"><a href="https://juristiliitto.fi/" target="_blank"><img
+						src="images/collabs/Juristiliitto.png"></a></li>
 			<!--<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
 						src="images/collabs/nu-law.png"></a></li>
 			<li class="flex-item" style="width: 250px;"><a href="https://litelab.law.hku.hk/" target="_blank"><img
@@ -498,8 +499,7 @@
 						src="images/collabs/LOGO-EUI-full.png"></a></li>
 			<li class="flex-item" style="width: 300px;"><a href="https://tuomioistuinvirasto.fi/en/index.html"
 					target="_blank"><img src="images/collabs/tuomioistuinvirasto.png"></a></li>
-			<li class="flex-item" style="width: 215px;"><a href="https://juristiliitto.fi/" target="_blank"><img
-						src="images/collabs/Juristiliitto.png"></a></li>
+			
 			<li class="flex-item" style="width: 175px;"><a href="https://asianajajaliitto.fi/" target="_blank"><img
 						src="images/collabs/Asianajajaliitto.png"></a></li>
 			<li class="flex-item" style="width: 350px;"><a href="https://www.ulapland.fi/EN" target="_blank"><img
@@ -548,6 +548,18 @@
 					target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
 			<li class="flex-item" style="width: 220px;"><a href="https://chancerylaneproject.org/" target="_blank"><img
 						src="images/logos/Logo blue.png"></a></li>
+			<li class="flex-item" style="width: 220px;"><a href="https://www.utu.fi/en" target="_blank"><img
+						src="images/collabs/UTU_logo_EN_RGB.png"></a></li>
+			<li class="flex-item" style="width: 220px;"><a href="https://www.laurea.fi/en/" target=" _blank"><img
+						src="images/collabs/laurea-pystylogo_rgb.png"></a></li>
+			<li class="flex-item" style="width: 220px;"><a href="https://www.vttresearch.com/en" target=" _blank"><img
+						src="images/collabs/VTT_Orange_Logo.png"></a></li>
+			<li class="flex-item" style="width: 220px;"><a href="https://www.uni-hamburg.de/en.html"
+					target=" _blank"><img src="images/collabs/university of hamburg-logo-u-2010-u-farbe-u-rgb.jpg"></a>
+			</li>
+			<li class="flex-item" style="width: 220px;"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab"
+					target=" _blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a>
+			</li>
 		</ul>
 
 	</div>
@@ -567,8 +579,7 @@
 								class="icon facebook col-3 margin-right-5 margin-left-5" target="_blank">Facebook</a>
 							<a href="https://www.instagram.com/legaldesignsummit/"
 								class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
-							<a href="https://twitter.com/legaldesignFI" class="icon twitter col-3 margin-left-5"
-								target="_blank">Twitter</a>
+
 						</div>
 					</div>
 				</div>
