--- a/footer.html
+++ b/footer.html
@@ -48,29 +48,115 @@
 
     <ul class="flex-container wrap" style="align-items: center;">
 
-      <li class="flex-item" style="width: 120px;"><a href="https://www.lancaster.ac.uk/law/" target="_blank"><img
-            src="images/collabs/lancaster-logo-2.PNG"></a></li>
-      <li class="flex-item" style="width: 120px;"><a href="https://chancerylaneproject.org/" target="_blank"><img
-            src="images/logos/Logo blue.png"></a></li>
-      <li class="flex-item" style="width: 100px;"><a href="https://taltech.ee/en/department-law" target="_blank"><img
-            src="images/collabs/TalTech.png"></a></li>
-      <li class="flex-item" style="width: 120px;"><a
-          href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img
-            src="images/collabs/Domstolsverket.png"></a></li>
-      <li class="flex-item" style="width: 130px;"><a href="https://www.domstol.se/helsingborgs-tingsratt/"
-          target="_blank"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
-      <li class="flex-item"><a
-          href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
-          target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>
-      <li class="flex-item" style="width: 60px;"><a href="https://legalhackers.org/" target="_blank"><img
-            src="images/collabs/lh.png"></a></li>
-      <li class="flex-item" style="width: 100px;"><a href="https://www.hiil.org/" target="_blank"><img
-            src="images/collabs/HiiL_Logo color tagline.png"></a></li>
-    </ul>
+      <div class="padding-top-40 justify-center" style="background-color: white;">
+        <h3>In co-operation with:</h3>
+        <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
+
+        <ul class="flex-container wrap">
+          <li class="flex-item" style="width: 100px"><a href="https://www.copenhagenlegaltech.dk/" target="_blank"><img
+                src="images/collabs/clt.png"></a></li>
+          <!--<li class="flex-item" style="width: 300px"><a href="https://www.aalto.fi/en" target="_blank"><img
+                src="images/collabs/aalto.png"></a></li>
+          
+          <li class="flex-item"><a href="https://jura.ku.dk/legaltechlab/" target="_blank"><img
+                src="images/collabs/cltl.png"></a></li>
+          <li class="flex-item" style="width: 300px"><a href="https://www.it-oikeus.org/" target="_blank"><img
+                src="images/collabs/it.png"></a></li>
+                -->
+          <li class="flex-item" style="width: 100px"><a href="https://elta.org/" target="_blank"><img
+                src="images/collabs/elta.png"></a></li>
+          <li class="flex-item"><a
+              href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
+              target="_blank"><img src="images/collabs/vanderbilt.png"></a></li>
+          <li class="flex-item" style="width: 100px;"><a href="https://legalhackers.org/" target="_blank"><img
+                src="images/collabs/lh.png"></a></li>
+          <li class="flex-item" style="width: 100px;"><a href="https://www.hiil.org/" target="_blank"><img
+                src="images/collabs/HiiL_Logo color tagline.png"></a></li>
+          <li class="flex-item" style="width: 100px;"><a href="https://juristiliitto.fi/" target="_blank"><img
+                src="images/collabs/Juristiliitto.png"></a></li>
+          <!--<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
+                src="images/collabs/nu-law.png"></a></li>
+          <li class="flex-item" style="width: 250px;"><a href="https://litelab.law.hku.hk/" target="_blank"><img
+                src="images/collabs/LITE-Lab.jpg"></a></li>
+          <li class="flex-item" style="width: 250px;"><a href="https://www.uchceu.com/en/" target="_blank"><img
+                src="images/collabs/universidad-uch.png"></a></li>
+          <li class="flex-item" style="width: 250px;"><a href="https://www.epj.es/" target="_blank"><img
+                src="images/collabs/Escuela-de-Practica-Juridica-black.jpg"></a></li>
+          <li class="flex-item" style="width: 250px;"><a
+              href="https://www.linkedin.com/company/think-legaltech/?viewAsMember=true" target="_blank"><img
+                src="images/collabs/thinklegaltech.png"></a></li>
+          <li class="flex-item"><a href="https://www.legaltechdesign.com/" target="_blank"><img
+                src="images/collabs/stanford.png"></a></li>
+          <li class="flex-item"><a href="https://www.eui.eu/en/home/" target="_blank"><img
+                src="images/collabs/LOGO-EUI-full.png"></a></li>
+          <li class="flex-item" style="width: 300px;"><a href="https://tuomioistuinvirasto.fi/en/index.html"
+              target="_blank"><img src="images/collabs/tuomioistuinvirasto.png"></a></li>
+          
+          <li class="flex-item" style="width: 175px;"><a href="https://asianajajaliitto.fi/" target="_blank"><img
+                src="images/collabs/Asianajajaliitto.png"></a></li>
+          <li class="flex-item" style="width: 350px;"><a href="https://www.ulapland.fi/EN" target="_blank"><img
+                src="images/collabs/lapin-yliopisto.png"></a></li>
+          <li class="flex-item" style="width: 300px;"><a href="https://sjquinney.utah.edu/" target="_blank"><img
+                src="images/collabs/college-of-law-logolcolor.jpg"></a></li>
+          <li class="flex-item" style="width: 300px;"><a href="https://www.lancaster.ac.uk/law/" target="_blank"><img
+                src="images/collabs/lancaster-logo-2.PNG"></a></li>-->
+
+          <!--	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img
+                src="images/collabs/logo-eLegal.png"></a></li>
+          <li class="flex-item" style="width: 370px;"><a href="https://www.laurea.fi/en/" target="_blank"><img
+                src="images/collabs/Laurea.png"></a></li>
+          <li class="flex-item" style="width: 240px;"><a href="https://www.uef.fi/en" target="_blank"><img
+                src="images/collabs/UEF.jpg"></a></li>
+          <li class="flex-item" style="width: 200px;"><a
+              href="https://oikeus.fi/hallintooikeudet/helsinginhallinto-oikeus/en/index.html"
+              target="_blank"><img src="images/collabs/Helsinki_Court_of_Appeal.png"></a></li>-->
+          <li class="flex-item" style="width: 180px;"><a href="https://www.domstol.se/helsingborgs-tingsratt/"
+              target="_blank"><img src="images/collabs/tr_Helsingborg_logo.png"></a></li>
+          <!--<li class="flex-item" style="width: 270px;"><a href="https://bond.edu.au/" target="_blank"><img
+                src="images/collabs/Bond-University.jpg"></a></li>
+          <li class="flex-item" style="width: 250px;"><a
+              href="https://oikeus.fi/karajaoikeudet/helsinginkarajaoikeus/en/index.html" target="_blank"><img
+                src="images/collabs/Helsinki_District_Court_Logo.jpg"></a></li>
+          <li class="flex-item" style="width: 300px;"><a href="https://www.pelastakaalapset.fi/en/frontpage/"
+              target="_blank"><img src="images/collabs/Save_the_Children.png"></a></li>-->
+          <li class="flex-item" style="width: 180px;"><a
+              href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img
+                src="images/collabs/Domstolsverket.png"></a></li>
+          <!--<li class="flex-item" style="width: 270px;"><a href="https://www.legaloperations.com.br/"
+              target="_blank"><img src="images/collabs/CLOB.png"></a></li>
+          <li class="flex-item" style="width: 220px;"><a href="https://www.linkedin.com/company/neld-usp"
+              target="_blank"><img src="images/collabs/NELD.png"></a></li>
+          <li class="flex-item" style="width: 260px;"><a
+              href="https://www.helsinki.fi/en/networks/helsinki-incubators" target="_blank"><img
+                src="images/collabs/Helsinki-Incubators.png"></a></li>-->
+          <li class="flex-item" style="width: 100px;"><a href="https://taltech.ee/en/department-law"
+              target="_blank"><img src="images/collabs/TalTech.png"></a></li>
+          <!--<li class="flex-item" style="width: 350px;"><a href="https://direitosp.fgv.br/en" target="_blank"><img
+                src="images/collabs/FGV-Direito-SP.png"></a></li>
+          <li class="flex-item" style="width: 270px;"><a
+              href="https://www.uchceu.com/en/advanced-learning-facilities/legal-tech" target="_blank"><img
+                src="images/collabs/Erasmus_program.PNG"></a></li>-->
+          <li class="flex-item" style="width: 100px;"><a href="https://taltech.ee/en/department-law"
+              target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
+          <li class="flex-item" style="width: 100px;"><a href="https://chancerylaneproject.org/" target="_blank"><img
+                src="images/logos/Logo blue.png"></a></li>
+          <li class="flex-item" style="width: 100px;"><a href="https://www.utu.fi/en" target="_blank"><img
+                src="images/collabs/UTU_logo_EN_RGB.png"></a></li>
+          <li class="flex-item" style="width: 100px;"><a href="https://www.laurea.fi/en/" target=" _blank"><img
+                src="images/collabs/laurea-pystylogo_rgb.png"></a></li>
+          <li class="flex-item" style="width: 100px;"><a href="https://www.vttresearch.com/en" target=" _blank"><img
+                src="images/collabs/VTT_Orange_Logo.png"></a></li>
+          <li class="flex-item" style="width: 100px;"><a href="https://www.uni-hamburg.de/en.html" target=" _blank"><img
+                src="images/collabs/university of hamburg-logo-u-2010-u-farbe-u-rgb.jpg"></a>
+          </li>
+          <li class="flex-item" style="width: 100px;"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab"
+              target=" _blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a>
+          </li>
+        </ul>
+      </div>
+
+      <!-- Content Main Section Ends -->
+
+
+
   </div>
-
-  <!-- Content Main Section Ends -->
-
-
-
-</div>
