--- a/index.html
+++ b/index.html
@@ -461,8 +461,6 @@
 		<p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
 
 		<ul class="flex-container wrap">
-			<li class="flex-item" style="width: 150px"><a href="https://www.copenhagenlegaltech.dk/"
-					target="_blank"><img src="images/collabs/clt.png"></a></li>
 			<!--<li class="flex-item" style="width: 300px"><a href="https://www.aalto.fi/en" target="_blank"><img
 						src="images/collabs/aalto.png"></a></li>
 			
@@ -471,7 +469,11 @@
 			<li class="flex-item" style="width: 300px"><a href="https://www.it-oikeus.org/" target="_blank"><img
 						src="images/collabs/it.png"></a></li>
 						-->
-			<li class="flex-item"><a href="https://elta.org/" target="_blank"><img src="images/collabs/elta.png"></a>
+			<li class="flex-item" style="width: 260px;"><a href="https://www.iltanet.org/home" target=" _blank"><img
+						src="images/collabs/ILTA-logo-full.png"></a>
+			</li>
+			<li class="flex-item" style="width: 220px;"><a href="https://elta.org/" target="_blank"><img
+						src="images/collabs/elta.png"></a>
 			</li>
 			<li class="flex-item"><a
 					href="https://law.vanderbilt.edu/academics/academic-programs/law-and-innovation/activities.php"
@@ -480,6 +482,8 @@
 						src="images/collabs/lh.png"></a></li>
 			<li class="flex-item" style="width: 150px;"><a href="https://www.hiil.org/" target="_blank"><img
 						src="images/collabs/HiiL_Logo color tagline.png"></a></li>
+			<li class="flex-item" style="width: 150px"><a href="https://www.copenhagenlegaltech.dk/"
+					target="_blank"><img src="images/collabs/clt.png"></a></li>
 			<li class="flex-item" style="width: 215px;"><a href="https://juristiliitto.fi/" target="_blank"><img
 						src="images/collabs/Juristiliitto.png"></a></li>
 			<!--<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
@@ -552,14 +556,15 @@
 						src="images/collabs/UTU_logo_EN_RGB.png"></a></li>
 			<li class="flex-item" style="width: 220px;"><a href="https://www.laurea.fi/en/" target=" _blank"><img
 						src="images/collabs/laurea-pystylogo_rgb.png"></a></li>
-			<li class="flex-item" style="width: 220px;"><a href="https://www.vttresearch.com/en" target=" _blank"><img
+			<li class="flex-item" style="width: 190px;"><a href="https://www.vttresearch.com/en" target=" _blank"><img
 						src="images/collabs/VTT_Orange_Logo.png"></a></li>
-			<li class="flex-item" style="width: 220px;"><a href="https://www.uni-hamburg.de/en.html"
+			<li class="flex-item" style="width: 280px;"><a href="https://www.uni-hamburg.de/en.html"
 					target=" _blank"><img src="images/collabs/university of hamburg-logo-u-2010-u-farbe-u-rgb.jpg"></a>
 			</li>
-			<li class="flex-item" style="width: 220px;"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab"
+			<li class="flex-item" style="width: 190px;"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab"
 					target=" _blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a>
 			</li>
+
 		</ul>
 
 	</div>
