--- a/index.html
+++ b/index.html
@@ -486,9 +486,9 @@
 					target="_blank"><img src="images/collabs/clt.png"></a></li>
 			<li class="flex-item" style="width: 215px;"><a href="https://juristiliitto.fi/" target="_blank"><img
 						src="images/collabs/Juristiliitto.png"></a></li>
-			<!--<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
+			<li class="flex-item" style="width: 250px;"><a href="https://www.nulawlab.org/" target="_blank"><img
 						src="images/collabs/nu-law.png"></a></li>
-			<li class="flex-item" style="width: 250px;"><a href="https://litelab.law.hku.hk/" target="_blank"><img
+			<!--<li class="flex-item" style="width: 250px;"><a href="https://litelab.law.hku.hk/" target="_blank"><img
 						src="images/collabs/LITE-Lab.jpg"></a></li>
 			<li class="flex-item" style="width: 250px;"><a href="https://www.uchceu.com/en/" target="_blank"><img
 						src="images/collabs/universidad-uch.png"></a></li>
@@ -558,13 +558,29 @@
 						src="images/collabs/laurea-pystylogo_rgb.png"></a></li>
 			<li class="flex-item" style="width: 190px;"><a href="https://www.vttresearch.com/en" target=" _blank"><img
 						src="images/collabs/VTT_Orange_Logo.png"></a></li>
+
 			<li class="flex-item" style="width: 280px;"><a href="https://www.uni-hamburg.de/en.html"
 					target=" _blank"><img src="images/collabs/university of hamburg-logo-u-2010-u-farbe-u-rgb.jpg"></a>
 			</li>
 			<li class="flex-item" style="width: 190px;"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab"
 					target=" _blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a>
 			</li>
-
+		</ul>
+		<ul class="flex-container wrap">
+			<li class="flex-item" style="width: 280px;"><a href="https://www.linkedin.com/in/olive-mumbo-72ba2059/"
+					target=" _blank"><img src="images/collabs/OliveHarbor Global Solutions.png"></a></li>
+			<li class="flex-item" style="width: 190px;"><a href="https://www.aalto.fi/en" target=" _blank"><img
+						src="images/collabs/Aalto uni logo.png"></a>
+			</li>
+			<li class="flex-item" style="width: 190px;"><a href="https://www.linkedin.com/in/nokkonen/"
+					target=" _blank"><img src="images/collabs/kolmas persoona logo (Outi Nokkonen).svg"></a>
+			</li>
+			<li class="flex-item" style="width: 190px;"><a href="https://projects.tuni.fi/jargonfree/"
+					target=" _blank"><img src="images/collabs/JARGONFREE_logo.jpg"></a>
+			</li>
+			<li class="flex-item" style="width: 190px;"><a href="https://legalshake.com/" target=" _blank"><img
+						src="images/collabs/Legal_Shake.png"></a>
+			</li>
 		</ul>
 
 	</div>
