--- a/index.html
+++ b/index.html
@@ -581,6 +581,26 @@
 			<li class="flex-item" style="width: 190px;"><a href="https://legalshake.com/" target=" _blank"><img
 						src="images/collabs/Legal_Shake.png"></a>
 			</li>
+			<li class="flex-item" style="width: 220px;"><a href="https://me.stanford.edu/" target=" _blank"><img
+						src="images/collabs/Stanford Mechanical Engineeering Logo.png"></a>
+			</li>
+			<li class="flex-item" style="width: 220px;"><a href="https://lawyersdesignschool.com/" target=" _blank"><img
+						src="images/collabs/lawyer_design_school.png"></a>
+			</li>
+			<li class="flex-item" style="width: 220px;"><a href="https://www.jku.at/en/schools/" target=" _blank"><img
+						src="images/collabs/JKU_School_LIFT_C_en_schwarz_hoch_cmyk.jpg"></a>
+			</li>
+			<li class="flex-item" style="width: 220px;"><a
+					href="https://www.nu.edu/college/school-of-arts-letters-and-sciences/" target=" _blank"><img
+						src="images/collabs/NU College of Art and Design. JPG"></a>
+			</li>
+			<li class="flex-item" style="width: 220px;"><a href="https://legaldesignsummit.com" target=" _blank"><img
+						src="images/collabs/NJLDL-Logo-v1.png"></a>
+			</li>
+			<li class="flex-item" style="width: 220px;"><a
+					href="https://www.nulawlab.org/projects/the-east-boston-spatial-justice-lab" target=" _blank"><img
+						src="images/collabs/East Boston Spatial Justice Lab.jpeg"></a>
+			</li>
 		</ul>
 
 	</div>
