--- a/brainfactory.html
+++ b/brainfactory.html
@@ -135,6 +135,84 @@
       font-weight: bold;
       padding-bottom: 20px;
     }
+
+    .workshop-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+      padding: 0 10%;
+    }
+
+    .workshop-card {
+      background-color: white;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      text-align: center;
+    }
+
+    .workshop-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+    }
+
+    .workshop-card h4 {
+      margin-top: 0;
+      color: #c30979;
+      font-size: 18px;
+    }
+
+    .workshop-card p {
+      font-size: 15px;
+      color: #333;
+    }
+
+    .workshop-card ul {
+      text-align: left;
+      padding-left: 20px;
+      margin-top: 10px;
+      margin-bottom: 0;
+      color: #222;
+      font-size: 15px;
+    }
+
+    .workshop-card li {
+      margin-bottom: 6px;
+      line-height: 1.4;
+      color: #222;
+      font-size: 15px;
+    }
+
+    .workshop-card p {
+      text-align: left;
+    }
+
+    .workshop-divider h3 {
+      margin: 0;
+      font-size: 24px;
+      color: #c30979;
+    }
+
+
+    .workshop-divider {
+      margin: 80px 10% 40px;
+      text-align: center;
+      border-top: 2px solid #c30979;
+      padding-top: 40px;
+    }
+
+    .section-divider {
+      margin: 80px auto 40px;
+      width: 60%;
+      border-top: 2px solid white;
+      opacity: 0.4;
+    }
+
+    .afternoon-workshops-section {
+      margin-bottom: 80px;
+    }
   </style>
 
 
@@ -198,25 +276,220 @@
       <div id="content-why-attend" class="justify-center" style="color: #fff">
 
         <h3>What is BrainFactory?</h3>
+        <p>BrainFactory is a one-day event with highly interactive, immersive, and inspiring hands-on workshops,
+          brainstorming sessions, and protoyping exercises.</p>
         <p>For 2025, we're reimagining BrainFactory into interactive workshops where you not only get to experience
           legal design, you get to dive into a specific area of legal design. Our BrainFactory team together with our
           Partners are building workshops that arise from real life examples from the cross-sections of law and design
           thinking.
-
-          We'll have workshops led by experts who work in legal design and apply it to: AI, legal tech, access to
-          justice, conflict management, contract design, sustainability, and legal writing.
           <br><br>
 
           Brains on for a full day of legal design! You'll attend two workshops - one in the morning and one in the
           afternoon - where you'll get to know other interested and like-minded legal professionals and dive into the
           topics at hand.
 
-          BrainFactory workshops take place 10 September 2025. AM Workshops take place 9:00-13:00, PM Workshops
-          14:00-16:00.
+          Are you new to legal design? Don't worry - we've got you covered. We have a specific workshop track to get
+          your feet wet in legal design and still pick up more tips and tricks if you have some experience.
+          <br><br>
         </p>
+        <h3>Program</h3>
+        <p>Locations: In and around central Helsinki (walking distance from the Summit venue)</p>
+        <p>9:00 - 13:00 Morning Workshops</p>
+
+        <div class="morning-workshops-section">
+          <h4 style="text-align: center; margin-bottom: 30px;">Choose your morning workshop</h4>
+          <div class="workshop-grid">
+            <div class="workshop-card">
+              <h4>Can AI Agents Master Legal Design?</h4>
+              <p>
+                In this hands-on session, you’ll build your own AI “legal design team,” run a full legal design sprint,
+                and compare results in real time. You'll both think and experiment how both the legal design process and
+                roles could convert into prompts and guidance for AI. See how multi-agent collaboration could reshape
+                legal work.
+              </p>
+              <p><strong>Facilitators:</strong></p>
+              <ul>
+                <li>Antti Innanen, CEO and Founder, Dot. Legal Design</li>
+                <li>Imperiale, Founder and Managing Director, Better Ipsum</li>
+                <li>Cat Moon, Law Professor and Founding Co-Director, Vanderbilt AI + Law Lab (VAILL), Vanderbilt Law
+                  School</li>
+              </ul>
+            </div>
+
+            <div class="workshop-card">
+              <h4>From Insights to Action: Advancing People-Centred Justice through Legal Design</h4>
+              <p>What if legal systems were designed like great services—intuitive, human, and radically focused on the
+                people they serve? In this dynamic, hands-on workshop, we’ll roll up our sleeves and explore how legal
+                design can move us from understanding justice needs to delivering people-centred solutions. Hosted by
+                HiiL
+                – The Hague Institute for Innovation of Law, this session brings to life insights from the Justice
+                Innovation Lab’s work in Tunisia, Nigeria, Burkina Faso, Ethiopia, and Niger. You’ll hear powerful,
+                real-world stories from legal designers and justice innovators on the ground—and then become part of the
+                story. Together, we’ll step into the shoes of justice users, identify urgent legal challenges, and
+                co-create breakthrough ideas using design tools. Expect fast-paced collaboration, fresh thinking, and a
+                few unexpected twists along the way. Whether you’re a policymaker, practitioner, designer, or curious
+                changemaker, you’ll leave with practical frameworks and renewed energy for making justice systems truly
+                work for people.
+              </p>
+              <p><strong>Facilitators:</strong></p>
+              <ul>
+                <li>Zainab Malik, Senior Policy and Advocacy Advisor - HiiL; </li>
+                <li> Viviana Brun, Programme Manager, Justice Innovation Labs - HiiL</li>
+              </ul>
+
+            </div>
+            <div class="workshop-card">
+              <h4>Legal Design Writing: Telling the World and Getting Heard</h4>
+              <p>Do you have something you want to tell the world, but publishing your ideas feels a bit intimidating?
+                Writing is a bit like a monster with razor-sharp deadlines, intimidating reviewer fangs, surrounded by
+                the
+                paralyzing fog of perfectionism? Join this four-hour workshop to tame the publication beast, tell the
+                world and make your ideas heard. Walk away with a roadmap for your work, as well as some key
+                accountability partners.
+              </p>
+              <p><strong>Facilitators:</strong></p>
+              <ul>
+                <li>Michael Doherty, Professor of Legal Design, Lancaster University</li>
+                <li>Helena Haapio, Contract Strategist, Lexpert Ltd</li>
+                <li>Lisa Toohey, Professor, UNSW Law & Justice</li>
+                <li>Michael Blasie, Dean and Professor of Law, KIMEP University</li>
+              </ul>
+            </div>
+            <div class="workshop-card">
+              <h4>Legal Design From First Principles</h4>
+              <p>Think design is just for creatives? Think again. This science-led workshop draws on human factors,
+                psychology, and usability research to show how lawyers can use proven design principles to make
+                contracts
+                work better for everyone. We’ll strip legal design back to its fundamentals, understanding how people
+                read, think, decide, and act, and use that understanding to build smarter, more user-friendly legal
+                documents. Through short exercises and real-world examples, you’ll explore why good design isn’t about
+                pretty fonts or graphics, it’s about using friction effectively, improving comprehension, and helping
+                people make better decisions. Whether you're new to legal design or looking to strengthen your approach,
+                you'll leave with practical tools grounded in science, not just style.
+              <p><strong>Facilitators:</strong></p>
+              <ul>
+                <li>Peter Hornsby, Designer - Edgerton Riley</li>
+              </ul>
+              </p>
+            </div>
+            <div class="workshop-card">
+              <h4>Organizational Design for Legal Teams in the Age of Artificial Intelligence</h4>
+              <p>This interactive workshop explores how artificial intelligence (AI) is reshaping the principles of
+                organisational design. Participants will dive into practical strategies for building more dynamic and
+                adaptive legal teams — rethinking processes, roles, structures, and culture to stay competitive in a
+                rapidly changing, AI-driven world. By the end of the session, attendees will have actionable tools to
+                rethink organisational design in the context of AI — from redefining job roles to fostering an
+                innovation-ready culture in a legal team.
+              </p>
+              <ul>
+                <p><strong>Facilitators:</strong></p>
+                <li>Heikki Ilvessalo, CEO, ILVES</li>
+                <li>Maria Sorsimo, Head of Finland, Legora</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="workshop-divider">
+          <h3>Afternoon Workshops</h3>
+          <p>14:00 – 18:00</p>
+        </div>
+        <div class="workshop-grid">
+          <div class="afternoon-workshops-section">
+            <div class="workshop-grid">
+              <div class="workshop-card">
+                <h4>Designing the Future of Law: AI-Powered Legal Design Sprint</h4>
+                <p>How might we harness AI to accelerate the adoption of legal design across the profession? Join us for
+                  an
+                  intensive 4-hour design sprint where legal professionals, technologists, and designers will co-create
+                  innovative solutions to pressing legal challenges. Participants will collaborate at themed tables
+                  focused
+                  on
+                  high-impact areas like access to justice, contract simplification, and legal visualisation. Guided by
+                  the
+                  proven Brainfactory × DLA methodology and inspired by lightning talks from legal design pioneers,
+                  you’ll
+                  ideate, prototype, and pitch ideas that show how AI can make legal systems more human-centered,
+                  efficient,
+                  and accessible. With support from leading tech providers, you’ll leave with tangible prototypes - and
+                  a
+                  deeper understanding of the ROI of integrating AI into legal workflows. Whether you're a lawyer, a
+                  designer,
+                  or a changemaker in between, this is your chance to shape the future of law.
+                </p>
+                <p><strong>Facilitators:</strong></p>
+                <ul>
+                  <li>Mayowa Odusote, DLA Piper</li>
+
+                </ul>
+              </div>
+
+              <div class="workshop-card">
+                <h4>Contract design: practical techniques to transform your B2B contracts straight away</h4>
+                <p>In this interactive workshop, contract drafters and negotiators will learn how to transform business
+                  contracts to dramatically reduce friction and negotiation times – and improve commercial
+                  relationships.We
+                  will share our expertise in simplifying complex contracts, focusing on foundational techniques that
+                  can
+                  get
+                  you immediate results.
+                </p>
+                <p><strong>Facilitators:</strong></p>
+                <ul>
+                  <li>Stefania Passera, Contract Design Expert, CEO, Passera Design</li>
+
+                </ul>
+              </div>
+              <div class="workshop-card">
+                <h4>Enabling Digital Transformation through Legal Design</h4>
+                <p>How might we use legal design to solve digital transformation problems? We'll talk about common pain
+                  points
+                  in digital transformation and how we can address those pain points using legal design. The interactive
+                  workshop will focus on real cases where EY's clients have dealt with a digital transformation,
+                  exploring
+                  the
+                  ways legal design has and could enable a greater and smoother shift in the digital age.
+
+                </p>
+                <p><strong>Facilitators:</strong></p>
+                <ul>
+                  <li>Carol Hannud, Legal Transformation, Dispute System Design, and Legal Design Senior Executive, EY
+                    (Brazil)</li>
+                  <li> Piia Madissoo, Legal Transform & Operate Lead, EY (Finland)</li>
+                </ul>
+              </div>
+              <div class="workshop-card">
+                <h4>Legal Design for Sustainability</h4>
+                <p>This workshop explores how legal design can be applied to enhance sustainability-related processes
+                  and
+                  language. Through hands-on activities and case studies, participants will: 1. co-create clearer
+                  sustainability clauses, 2. rethink legal transformation toolkits, and 3. design meaningful stakeholder
+                  engagement strategies.
+
+                </p>
+                <p><strong>Facilitators:</strong></p>
+                <ul>
+                  <li> Sampo Mielityinen, Head of Master’s Programme on Legal Design and Legal Expertise, Laurea
+                    University
+                    of
+                    Applied Sciences
+                  </li>
+                  <li> Seita Vesa, Professor of Environmental Law, UEF Law School, Research Professor, Finnish
+                    Environmental
+                    Institute (SYKE)</li>
+                  <li>Ebru Metin, Researcher, TalTech, Founder of Legal Design Turkey</li>
+                  <li> Anne Ketola, Senior Researcher, Tampere University</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="section-divider"></div>
+
 
         <div class="notification-section">
-          <a href="https://forms.gle/iznAzEELzg8ia43b9" target="_blank" class="notify-btn">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdVHpAdzXzkP84HBBlDGLZuKNthiVIXex8HG1faU-AU01c5wA/viewform?usp=sharing&ouid=118060274839672406819"
+            target="_blank" class="notify-btn">
             Register here!
           </a>
         </div>
@@ -246,20 +519,17 @@
 
                 <h4>Q: How do I participate?</h4>
                 <p>
-                  We’ll start taking early participants to sign up on 5 May and will open more slots in early June for
-                  another round of registration. Follow Legal Design Summit on LinkedIn and Instagram for the latest.
+                  Full sign up begins on 5 June. Follow Legal Design Summit on LinkedIn and Instagram for the latest.
+
+                  When registration is open, you’ll be able to register <a
+                    href="https://docs.google.com/forms/d/e/1FAIpQLSdVHpAdzXzkP84HBBlDGLZuKNthiVIXex8HG1faU-AU01c5wA/viewform?usp=sharing&ouid=118060274839672406819"
+                    style="color: #c30979;"> here</a>
                 </p>
                 <p>
-                  When registration is open, you’ll be able to register
-                  <a href="https://forms.gle/iznAzEELzg8ia43b9" style="color: #c30979;"> here</a>
-                </p>
-                <p>
-                  As 10 September gets closer, we will get back to all registered participants to rank their areas of
-                  workshop
-                  interest. We'll do our best to match you with your interest, but rest assured there is something for
-                  everyone in these workshops with the chance to engage in legal design and how it applies to so many
-                  areas of
-                  legal problems.
+                  We'll do our best to match you with workshops based on availability, preferences, background, and
+                  experience (in some cases) but rest assured there is something for everyone in these workshops with
+                  the
+                  chance to engage in legal design and how it applies to so many areas of legal problems.
                 </p>
               </div>
 
@@ -274,7 +544,8 @@
                 <p>Yes! We will, to the best of our ability, match you with a specialized track of workshops that will
                   offer
                   you the opportunity to get your feet wet!
-                  Also, legal designers are about the nicest people in the legal field you could ever meet. Everyone is
+                  Also, legal designers are about the nicest people in the legal field you could ever meet. Everyone
+                  is
                   willing to answer questions. After all, having a “beginner’s mind” is a key tenet of legal design!
                   Come join us.</p>
               </div>
@@ -284,7 +555,8 @@
                 <p>
                   Yes! Meet new people, learn from new experts, and apply legal design to the most current problems
                   facing
-                  legal professionals. You may even stretch yourself to take workshops outside your daily area and learn
+                  legal professionals. You may even stretch yourself to take workshops outside your daily area and
+                  learn
                   through analogous experience how legal design can work in different fields.
                 </p>
               </div>
