BF button on front page

--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
 			height: auto;
 			transition: transform 0.2s ease-in-out;
 		}
+
+		.notification-section {
+			display: flex;
+			justify-content: center;
+			gap: 30px;
+			/* adjust spacing as needed */
+			flex-wrap: wrap;
+			/* allows stacking on small screens */
+		}
 	</style>
 
 </head>
@@ -166,6 +175,11 @@
 	<div class="notification-section">
 		<a href="https://ti.to/legal-design-summit-2025/legal-design-summit-2025" target="_blank" class="notify-btn">
 			Get your tickets here!
+		</a>
+
+		<a href="https://docs.google.com/forms/d/e/1FAIpQLSdVHpAdzXzkP84HBBlDGLZuKNthiVIXex8HG1faU-AU01c5wA/viewform?usp=sharing&ouid=118060274839672406819"
+			target="_blank" class="notify-btn">
+			Register for the BrainFactory here!
 		</a>
 	</div>
 
